ready for express

--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1,7 +1,7 @@
 /*!
- * Start Bootstrap - Resume v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/resume)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
+ * Start Bootstrap - Resume v4.0.0-beta.2 (https://github.com/jankovicgd/cinziaCV#readme)
+ * Copyright 2013-2017 Start Bootstrap and Nikola Jankovic
+ * Licensed under MIT (https://github.com/BlackrockDigital/resume-ch/blob/master/LICENSE)
  */
 body {
   font-family: 'Open Sans', serif;
@@ -40,14 +40,14 @@ h2 {
 .list-social-icons a {
   color: #495057; }
   .list-social-icons a:hover {
-    color: #009bd3; }
+    color: #21aeef; }
   .list-social-icons a .fa-lg {
     font-size: 1.75rem; }
 
 .list-icons {
   font-size: 3rem; }
   .list-icons .list-inline-item i:hover {
-    color: #009bd3; }
+    color: #21aeef; }
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 600;
@@ -104,12 +104,12 @@ section.resume-section {
     padding-bottom: 3rem !important; } }
 
 .bg-primary {
-  background-color: #009bd3 !important; }
+  background-color: #21aeef !important; }
 
 .text-primary {
-  color: #009bd3 !important; }
+  color: #21aeef !important; }
 
 a {
-  color: #009bd3; }
+  color: #21aeef; }
   a:hover, a:focus, a:active {
-    color: #824027; }
+    color: #0d81b6; }
